Dev endpoints (1+2) updated to match wiki.
