# IAMApp/IAM/obj/Release/net5.0/Razor/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml.g.cs
@@ -1,4 +1,4 @@
-#pragma checksum "C:\Users\Jimmy\Desktop\Lexicon_GruppArbete\IAMApp_03\IAM\Areas\Identity\Pages\Account\ResetPasswordConfirmation.cshtml" "{ff1816ec-aa5e-4d10-87f7-6f4963833460}" "9fa2ad01473fa832304d2166b6c6d5536eb62725"
+#pragma checksum "C:\repo\WebShop\IAMApp\IAM\Areas\Identity\Pages\Account\ResetPasswordConfirmation.cshtml" "{ff1816ec-aa5e-4d10-87f7-6f4963833460}" "f0777872b9ce78f7b6d3c93e5abfb33c74fd771f"
 // <auto-generated/>
 #pragma warning disable 1591
 [assembly: global::Microsoft.AspNetCore.Razor.Hosting.RazorCompiledItemAttribute(typeof(AspNetCore.Areas_Identity_Pages_Account_ResetPasswordConfirmation), @"mvc.1.0.razor-page", @"/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml")]
@@ -13,42 +13,42 @@ namespace AspNetCore
     using Microsoft.AspNetCore.Mvc.Rendering;
     using Microsoft.AspNetCore.Mvc.ViewFeatures;
 #nullable restore
-#line 1 "C:\Users\Jimmy\Desktop\Lexicon_GruppArbete\IAMApp_03\IAM\Areas\Identity\Pages\_ViewImports.cshtml"
+#line 1 "C:\repo\WebShop\IAMApp\IAM\Areas\Identity\Pages\_ViewImports.cshtml"
 using Microsoft.AspNetCore.Identity;
 
 #line default
 #line hidden
 #nullable disable
 #nullable restore
-#line 2 "C:\Users\Jimmy\Desktop\Lexicon_GruppArbete\IAMApp_03\IAM\Areas\Identity\Pages\_ViewImports.cshtml"
+#line 2 "C:\repo\WebShop\IAMApp\IAM\Areas\Identity\Pages\_ViewImports.cshtml"
 using IAM.Areas.Identity;
 
 #line default
 #line hidden
 #nullable disable
 #nullable restore
-#line 3 "C:\Users\Jimmy\Desktop\Lexicon_GruppArbete\IAMApp_03\IAM\Areas\Identity\Pages\_ViewImports.cshtml"
+#line 3 "C:\repo\WebShop\IAMApp\IAM\Areas\Identity\Pages\_ViewImports.cshtml"
 using IAM.Areas.Identity.Pages;
 
 #line default
 #line hidden
 #nullable disable
 #nullable restore
-#line 5 "C:\Users\Jimmy\Desktop\Lexicon_GruppArbete\IAMApp_03\IAM\Areas\Identity\Pages\_ViewImports.cshtml"
+#line 5 "C:\repo\WebShop\IAMApp\IAM\Areas\Identity\Pages\_ViewImports.cshtml"
 using IAM.Areas.Identity.Data;
 
 #line default
 #line hidden
 #nullable disable
 #nullable restore
-#line 1 "C:\Users\Jimmy\Desktop\Lexicon_GruppArbete\IAMApp_03\IAM\Areas\Identity\Pages\Account\_ViewImports.cshtml"
+#line 1 "C:\repo\WebShop\IAMApp\IAM\Areas\Identity\Pages\Account\_ViewImports.cshtml"
 using IAM.Areas.Identity.Pages.Account;
 
 #line default
 #line hidden
 #nullable disable
-    [global::Microsoft.AspNetCore.Razor.Hosting.RazorSourceChecksumAttribute(@"SHA1", @"9fa2ad01473fa832304d2166b6c6d5536eb62725", @"/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml")]
-    [global::Microsoft.AspNetCore.Razor.Hosting.RazorSourceChecksumAttribute(@"SHA1", @"e9dee4375d027369a3f3c67f87ba86ccaad858dd", @"/Areas/Identity/Pages/_ViewImports.cshtml")]
+    [global::Microsoft.AspNetCore.Razor.Hosting.RazorSourceChecksumAttribute(@"SHA1", @"f0777872b9ce78f7b6d3c93e5abfb33c74fd771f", @"/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml")]
+    [global::Microsoft.AspNetCore.Razor.Hosting.RazorSourceChecksumAttribute(@"SHA1", @"9db9feb5e74f776b9443aa9b053a3b17f7b88570", @"/Areas/Identity/Pages/_ViewImports.cshtml")]
     [global::Microsoft.AspNetCore.Razor.Hosting.RazorSourceChecksumAttribute(@"SHA1", @"9c4f0eeb509983df2c22d6c0f963c8720fa0860b", @"/Areas/Identity/Pages/Account/_ViewImports.cshtml")]
     public class Areas_Identity_Pages_Account_ResetPasswordConfirmation : global::Microsoft.AspNetCore.Mvc.RazorPages.Page
     {
@@ -78,23 +78,23 @@ using IAM.Areas.Identity.Pages.Account;
         public async override global::System.Threading.Tasks.Task ExecuteAsync()
         {
 #nullable restore
-#line 3 "C:\Users\Jimmy\Desktop\Lexicon_GruppArbete\IAMApp_03\IAM\Areas\Identity\Pages\Account\ResetPasswordConfirmation.cshtml"
+#line 3 "C:\repo\WebShop\IAMApp\IAM\Areas\Identity\Pages\Account\ResetPasswordConfirmation.cshtml"
   
     ViewData["Title"] = "Reset password confirmation";
 
 #line default
 #line hidden
 #nullable disable
-            WriteLiteral("\r\n<h1>");
+            WriteLiteral("\n<h1>");
 #nullable restore
-#line 7 "C:\Users\Jimmy\Desktop\Lexicon_GruppArbete\IAMApp_03\IAM\Areas\Identity\Pages\Account\ResetPasswordConfirmation.cshtml"
+#line 7 "C:\repo\WebShop\IAMApp\IAM\Areas\Identity\Pages\Account\ResetPasswordConfirmation.cshtml"
 Write(ViewData["Title"]);
 
 #line default
 #line hidden
 #nullable disable
-            WriteLiteral("</h1>\r\n<p>\r\n    Your password has been reset. Please ");
-            __tagHelperExecutionContext = __tagHelperScopeManager.Begin("a", global::Microsoft.AspNetCore.Razor.TagHelpers.TagMode.StartTagAndEndTag, "9fa2ad01473fa832304d2166b6c6d5536eb627255034", async() => {
+            WriteLiteral("</h1>\n<p>\n    Your password has been reset. Please ");
+            __tagHelperExecutionContext = __tagHelperScopeManager.Begin("a", global::Microsoft.AspNetCore.Razor.TagHelpers.TagMode.StartTagAndEndTag, "f0777872b9ce78f7b6d3c93e5abfb33c74fd771f4786", async() => {
                 WriteLiteral("click here to log in");
             }
             );
@@ -109,7 +109,7 @@ Write(ViewData["Title"]);
             }
             Write(__tagHelperExecutionContext.Output);
             __tagHelperExecutionContext = __tagHelperScopeManager.End();
-            WriteLiteral(".\r\n</p>\r\n");
+            WriteLiteral(".\n</p>\n");
         }
         #pragma warning restore 1998
         [global::Microsoft.AspNetCore.Mvc.Razor.Internal.RazorInjectAttribute]
